--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js"
   },
-  "dependencies": {
-    "passport-oauth2-password-grant": "0.0.4",
+  "dependencies": {},
+  "devDependencies": {
     "we-plugin-acl": "^1.2.8",
     "we-plugin-auth": "^1.1.4",
-    "we-plugin-user": "^1.1.2"
-  },
-  "devDependencies": {
+    "we-plugin-user": "^1.1.2",
     "express-mysql-session": "^1.1.1",
     "mysql": "^2.11.1",
     "fs-extra": "^0.30.0",
@@ -26,6 +24,7 @@
   "keywords": [
     "wejs-plugin",
     "passport",
+    "password",
     "oauth2"
   ],
   "wejs": {
