--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "version": "2.0.1",
   "main": "plugin.js",
   "scripts": {
-    "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js"
+    "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js",
+    "coverage": "NODE_ENV=test LOG_LV=info nyc ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b"
   },
   "dependencies": {
-    "uuid": "^3.1.0"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "express-mysql-session": "^1.2.1",
-    "fs-extra": "^3.0.1",
-    "mocha": "^3.4.2",
-    "mysql2": "^1.5.2",
-    "supertest": "^3.0.0",
-    "we-core": "^2",
-    "we-plugin-acl": "^1.2.11",
+    "connect-sqlite3": "^0.9.11",
+    "express-mysql-session": "^2.1.0",
+    "fs-extra": "^8.1.0",
+    "mocha": "^7.0.0",
+    "mysql2": "^2.1.0",
+    "nyc": "^15.0.0",
+    "sqlite3": "^4.1.1",
+    "supertest": "^4.0.2",
+    "we-core": "^3",
+    "we-plugin-acl": "^1.2.15",
     "we-plugin-auth": "^2",
     "we-plugin-user": "^2",
-    "we-test-tools": "wejs/we-test-tools"
+    "we-test-tools": "^1.0.0"
   },
   "keywords": [
     "wejs-plugin",
